<resources>
    <string name="app_name">MunRoamer</string>
    <string name="emailLoginText">E-Mail</string>
    <string name="loginPassword">Password</string>
    <string name="loginHeading">Log In</string>
    <string name="loginButtonText">Roam</string>
    <string name="noAccountText">Don\'t have an account?</string>
    <string name="signUpText">Sign up here</string>
    <string name="contentDescribeLogo">Logo for MunRoamer.  Mountains Image with MunRoamer text.  Caption \"Explore Adventure\"</string>
    <string name="newFirstName">First Name</string>
    <string name="newLastName">Last Name</string>
    <string name="newEmail">Email Address</string>
    <string name="newPassword">Password</string>
    <string name="newPassword2">Confirm Password</string>
    <string name="signMeUpBtn">Sign Me Up!</string>
    <string name="cancelBtn">Cancel</string>
    <string name="findMunroBtn">Find Munros!</string>
    <string name="google_maps_API_key">AIzaSyA3V8mkicrg49fiOIeXL9WbG25jUHMdNws</string>
    <string name="google_places_API_key">AIzaSyByC1QWVz-7QSQ_jpscMZ_aXyq_Uk_2E_c</string>
    <string name="find_munros_btn">Find Munros</string>
    <string name="searchMapButon">Search</string>
    <string name="search">Search</string>
    <string name="beforeRoamTitle"><b><u>Before You Roam</u></b></string>
    <string name="before_roam_text"><b>Essential equipment</b><br/>\n
        <br/>\n
Warm and waterproof clothing, a map, compass and good navigation skills are essential, and in addition to the standard equipment for country walks, you should also carry:<br/>\n
        <br/>\n
- A survival bag - a heavy-duty bag that keeps your body insulated from the cold in an emergency.<br/>\n
        <br/>\n
- A torch and spare batteries<br/>\n
        <br/>\n
- A whistle (six blasts of a whistle or six flashes of a torch is the international distress signal)<br/>\n
        <br/>
- Additional warm clothing (including hat and gloves)<br/>\n
        <br/>
- High-energy rations (such as mint cake, chocolate, or dried fruit)<br/>\n
        <br/>\n
- Water purification tablets\n
        <br/>\n
- A first aid kit<br/>\n
        <br/>\n
- An ice axe and crampons when there is snow or ice on the hills<br/>\n
        <br/>\n
If you are likely to encounter heavy snow or ice, wear a pair of heavy-duty winter walking boots that can be fitted with crampons (metal spike attachments that give a better grip on icy terrain) and carry an ice axe. It’s worth learning how to use them before setting out on your walk as they can cause, rather than prevent, accidents if not used properly.</string>
    <string name="helpTitle"><b><u>About MunRoamer</u></b></string>
    <string name="helpContent">The Munros are the mountains in Scotland over 3000 feet high.<br/>\n
\n
•A Munro is a mountain in Scotland over 3000ft<br/>\n
        <br/>\n
•There are 282 Munros<br/>\n
        <br/>\n
•People like to hill hike up to the top of them. When you hit the summit, you have bagged a Munro.<br/>\n
        <br/>\n
•The beauty of wanting to bag all 282 of them is that in committing to do so, you open up the opportunity to see an incredible breadth of Scotlands outstanding and dramatic landscape.<br/>\n
        <br/>\n
•When you’ve bagged all 282 Munros, you’re considered a Munroist.  And that is when you start getting a lot of knowing nods, kudos and respect.<br/>\n
        <br/>\n
        <br/>\n
        <b>How To Use MunRoamer</b><br/>\n
        <br/>\n
        <br/>\n
        - Navigate through the app using the hamburger menu with the 3 lines at the top of the screen<br/>\n
        <br/>\n
    -Use the MunRoam map to find Munros nearby your location and search for Munros by name for example <i>Ben Nevis</i>.<br/>\n
        <br/>\n
    - Get some handy hiking advice by clicking on the <i>Before You Roam</i> option in the menu<br/>\n
        <br/>\n
    - Add a diary entry of your ascents once you have bagged a Munro in the <i>My Bag</i> option<br/></string>
    <string name="hello_munroamie">Hello MunRoamie!</string>
    <string name="munroMap">MunroMap</string>
    <string name="about">About</string>
    <string name="before_you_roam">Before You Roam</string>
    <string name="my_bag">My Bag</string>
    <string name="log_out">Log Out</string>
    <string name="logged_out_confirmed">You have successfully logged out</string>
    <string name="roam_again">Roam Again</string>
    <string name="add_to_my_bag">Add To My Bag</string>
    <string name="date_of_ascent">Date of Ascent</string>
    <string name="name_of_munro_field">Name of Munro</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="go_to_bag_btn">Go to Bag</string>
    <string name="view_bag">View Bag</string>
</resources>