<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/BlueJeans"
    tools:context=".NewBagEntry">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/EarthYellow"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu"
            android:id="@+id/menu_icon"
            android:paddingLeft="5dp"
            android:onClick="ClickMenu3">
        </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbarTitle"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAlignment="center">

            </TextView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/bagDate"
            android:layout_width="293dp"
            android:layout_height="49dp"
            android:background="@color/TeaGreen"
            android:ems="10"
            android:hint="@string/date_of_ascent"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/bagMunroName"
            android:layout_width="293dp"
            android:layout_height="49dp"
            android:background="@color/TeaGreen"
            android:ems="10"
            android:hint="@string/name_of_munro_field"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/bagDiaryEntry"
            android:layout_width="293dp"
            android:layout_height="100dp"
            android:background="@color/TeaGreen"
            android:ems="10"
            android:hint="@string/diary_entry"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>



        <Button
            android:id="@+id/addToBag"
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:text="@string/add_to_my_bag"
            android:textColor="@color/black"
            app:backgroundTint="@color/ButtonColour"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/cancelBag"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/cancelBtn"
            android:textColor="@color/white"
            android:visibility="visible"
            app:backgroundTint="@color/Ruby"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/goToBag"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/go_to_bag_btn"
            android:textColor="@color/black"
            app:backgroundTint="@color/ButtonColour"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/addAnother"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Add Another"
            android:textColor="@color/black"
            app:backgroundTint="@color/ButtonColour"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</LinearLayout>